# ros2-code

install/: local_setup.sh  setup.sh
install/bringup/share/bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/bringup/share/bringup/cmake/: ament_cmake_export_include_directories-extras.cmake  bringupConfig-version.cmake  bringupConfig.cmake
install/bringup/share/bringup/config/: camera_info.yaml  params.yaml
install/bringup/share/bringup/environment/: ament_prefix_path.dsv  path.dsv
install/bringup/share/bringup/launch/: launch.py
install/description/share/description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/description/share/description/cmake/: descriptionConfig-version.cmake  descriptionConfig.cmake
install/description/share/description/environment/: ament_prefix_path.dsv  path.dsv
install/description/share/description/launch/: view_model.launch.py  view_model.rviz
install/description/share/description/meshes/: camera_base_link.STL  pitch_link.STL  yaw_link.STL
install/interfaces/share/interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rm_description/share/rm_description/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vision/include/vision/: detector_node.hpp
install/vision/lib/vision/: camera_node  detector_node  process_node  processor_node
install/vision/share/vision/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build  latest_list
src/bringup/: CMakeLists.txt
src/bringup/config/: camera_info.yaml  params.yaml
src/bringup/launch/: launch.py
src/description/: CMakeLists.txt  package.xml
src/description/launch/: view_model.launch.py  view_model.rviz
src/description/meshes/: camera_base_link.STL
src/description/urdf/: gimbal.urdf.xacro
src/install/: local_setup.sh  setup.sh
src/interfaces/: CMakeLists.txt
src/log/: latest_build
src/vision/: CMakeLists.txt
src/vision/config/: default.yaml
src/vision/launch/: launch.py
src/vision/src/: camera_node.cpp  detector_node.cpp  processor_node.cpp
src/vision/test/: test_node.cpp
(+194 files in other folders)
